--- a/index.html
+++ b/index.html
@@ -312,13 +312,11 @@
                         <h3>Quick Facts</h3>
                         <ul>
                             <li><strong>Location:</strong> Perth, Western Australia</li>
-                            <li><strong>Research Focus:</strong> Social norms, cooperation, and incentives</li>
+                            <li><strong>Research Interests:</strong> Behavioural and experimental economics · Social norms ·  Institutions · Collective action problems </li>
                             <li><strong>Affiliation:</strong> UWA Centre for Environmental Economics & Policy</li>
                         </ul>
                     </div>
                     <p>Currently, I am a PhD Candidate in the <a href="https://www.uwaceep.org/research-students">Center for Environmental Economics & Policy</a> at the UWA School of Agriculture and Environment. I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
-                    <h2>Research Interests</h2>
-                    <p>Behavioural and experimental economics · Collective action problems · Norms · Institutions</p>
                 </td>
             </tr>
         </table>
