--- a/research.html
+++ b/research.html
@@ -13,7 +13,7 @@
             --text: #1f2937;
             --muted: #4b5563;
             --accent: #2563eb;
-            --accent-strong: #1d4ed8;
+            --accent-strong: #b8d9d3;
             --border: rgba(15, 23, 42, 0.12);
             --shadow: 0 18px 40px rgba(15, 23, 42, 0.12);
             --shadow-hover: 0 22px 50px rgba(15, 23, 42, 0.18);
@@ -147,7 +147,7 @@
         .badge-prep {
             background: rgba(255, 200, 120, 0.18);
             border-color: rgba(255, 200, 120, 0.4);
-            color: #ffcb8b;
+            color: #ffb78b;
         }
         .site-footer {
             margin-top: 32px;
