--- a/research.html
+++ b/research.html
@@ -129,15 +129,15 @@
             display: inline-flex;
             align-items: center;
             gap: 6px;
-            padding: 4px 10px;
+            padding: 6px 12px;
             border-radius: 999px;
-            font-size: 0.75em;
-            font-weight: 600;
-            background: rgba(122, 211, 198, 0.16);
-            color: var(--accent-strong);
-            border: 1px solid rgba(122, 211, 198, 0.4);
+            font-size: 0.8em;
+            font-weight: 700;
+            background: rgba(122, 211, 198, 0.25);
+            color: #2d7a6e;
+            border: 1.5px solid rgba(122, 211, 198, 0.6);
             text-transform: uppercase;
-            letter-spacing: 0.04em;
+            letter-spacing: 0.05em;
         }
         .badge-review {
             background: rgba(106, 167, 255, 0.18);
