--- a/research.html
+++ b/research.html
@@ -134,7 +134,7 @@
             font-size: 0.8em;
             font-weight: 700;
             background: rgba(122, 211, 198, 0.25);
-            color: #2d7a6e;
+            color: #92400e;
             border: 1.5px solid rgba(122, 211, 198, 0.6);
             text-transform: uppercase;
             letter-spacing: 0.05em;
@@ -147,7 +147,7 @@
         .badge-prep {
             background: rgba(255, 200, 120, 0.18);
             border-color: rgba(255, 200, 120, 0.4);
-            color: #ffb78b;
+            color: #334155;
         }
         .site-footer {
             margin-top: 32px;
