--- a/research.html
+++ b/research.html
@@ -267,7 +267,7 @@
                 How does experienced behavior change normative expectations regarding socially beneficial actions?
             </a><br>
             <em>with Steven G.M. Schilizzi and Chi Nguyen</em><br>
-            Revise and resubmit at the <em>Journal of Behavioral and Experimental Economics</em>.
+            <strong>Revise and resubmit at the <em>Journal of Behavioral and Experimental Economics</em>.</strong>
         </p>
 
         <h3><span class="badge badge-prep">Work in progress</span></h3>
@@ -276,14 +276,14 @@
                 From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors
             </a><br>
             <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
-            Being revised for resubmission.
+            <strong>Being revised for resubmission.</strong>
         </p>
 
         <p>
             Norm Heterogeneity and the Emergence of Cooperation: A Spatial Agent-Based Model of Conditional Cooperation
             <br>
             <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
-            In preparation.
+            <strong>In preparation.</strong>
         </p>
     </div>
 </div>
