--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Martínez-Felip - About</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Daniel Martínez-Felip - About</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
     :root {
         color-scheme: light dark;
@@ -117,6 +117,10 @@
         color: var(--text);
         border-bottom: 1px solid var(--border);
         padding-bottom: 6px;
+        margin-top: 24px;
+    }
+    .sidebar h2:first-of-type {
+        margin-top: 24px;
     }
     a {
         color: var(--accent);
@@ -183,6 +187,13 @@
     .quick-facts strong {
         color: var(--text);
     }
+    .sidebar-section {
+        margin-bottom: 20px;
+    }
+    .sidebar-section p {
+        margin: 8px 0;
+        line-height: 1.8;
+    }
     .site-footer {
         margin-top: 32px;
         padding: 18px 24px;
@@ -243,7 +254,6 @@
         }
     }
 </style>
-
 </head>
 <body>
     <div class="container">
@@ -262,7 +272,7 @@
             <table class="content-table">
                 <tr>
                     <td class="image-contact">
-                        <img src="Daniel_MartinezFelip.jpg" alt="Daniel Martínez Felip">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop" alt="Daniel Martínez Felip">
                         
                         <div class="contact-icons">
                             <a href="mailto:martinezfelipd@gmail.com" class="contact-link">
@@ -285,52 +295,39 @@
                             </a>
                         </div>
                         
-                        <h2>Research</h2>
-                        <p class="contact-info"> 
-                             <a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">
-                                 Google Scholar
-                             </a>
-                        </p>
-                        <p class="contact-info">
-                            <a href="https://www.researchgate.net/profile/Daniel-Martinez-Felip">
-                   ResearchGate
-                             </a>
-                        </p>
-                        <p class="contact-info">
-                            <a href="https://ideas.repec.org/f/pma3358.html">
-                   RePEc
-                             </a>
-                        </p>
-                        <h2>Useful Open Source Software</h2>
-                        <p><a href="https://www.otree.org/">oTree</a></p>
-                        <p><a href="https://cran.r-project.org/">R Project</a> & <a href="https://posit.co/">R Studio</a></p>
-                        <p><a href="https://www.latex-project.org/get/">LaTeX Project</a> & <a href="https://www.texstudio.org/">TeX Studio</a></p>
-                        <p><a href="https://pandoc.org/">Pandoc</a></p></td>
-                <td class="text">
-                    <h2>About Me</h2>
-                    <div class="quick-facts card">
-                        <h3>Quick Facts</h3>
-                        <ul>
-                            <li><strong>Location:</strong> Perth, Western Australia</li>
-                            <li><strong>Research Interests:</strong> Behavioural and experimental economics · Social norms ·  Institutions · Collective action problems </li>
-                            <li><strong>Affiliation:</strong> UWA Centre for Environmental Economics & Policy</li>
-                        </ul>
-                    </div>
-                    <p>Currently, I am a PhD Candidate in the <a href="https://www.uwaceep.org/research-students">Center for Environmental Economics & Policy</a> at the UWA School of Agriculture and Environment. I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <footer class="site-footer card">
-        <div class="footer-links">
-            <a href="mailto:martinezfelipd@gmail.com">Email</a>
-            <a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">Google Scholar</a>
-            <a href="https://orcid.org/0009-0000-6979-904X">ORCID</a>
-            <a href="https://bsky.app/profile/dmartinezfelip.bsky.social">Bluesky</a>
+                        <div class="sidebar-section">
+                            <h2>Resources</h2>
+                            <p><a href="https://www.otree.org/">oTree</a></p>
+                            <p><a href="https://cran.r-project.org/">R Project</a> & <a href="https://posit.co/">RStudio</a></p>
+                            <p><a href="https://www.latex-project.org/get/">LaTeX</a> & <a href="https://www.texstudio.org/">TeXstudio</a></p>
+                            <p><a href="https://www.zotero.org/">Zotero</a> & <a href="https://retorque.re/zotero-better-bibtex/">Better BibTeX</a></p>
+                            <p><a href="https://pandoc.org/">Pandoc</a></p>
+                        </div>
+                    </td>
+                    <td class="text">
+                        <h2>About Me</h2>
+                        <div class="quick-facts card">
+                            <h3>Quick Facts</h3>
+                            <ul>
+                                <li><strong>Location:</strong> Perth, Western Australia</li>
+                                <li><strong>Research Interests:</strong> Behavioural and experimental economics · Social norms · Institutions · Collective action problems</li>
+                                <li><strong>Affiliation:</strong> UWA Centre for Environmental Economics & Policy</li>
+                            </ul>
+                        </div>
+                        <p>Currently, I am a PhD Candidate in the <a href="https://www.uwaceep.org/research-students">Center for Environmental Economics & Policy</a> at the UWA School of Agriculture and Environment. I am interested in the economics and underpinnings of voluntary cooperation, and the effectiveness of social incentives as a lever for aligning personal interests with collective interests. My research focuses on studying the role of social norms in enhancing the effects of financial incentives on cooperative behaviour and how social norm enforcement mechanisms should be designed to trigger cooperative normative change.</p>
+                    </td>
+                </tr>
+            </table>
         </div>
-        <div>© 2025 Daniel Martínez-Felip</div>
-    </footer>
-</div>
-
+        <footer class="site-footer card">
+            <div class="footer-links">
+                <a href="mailto:martinezfelipd@gmail.com">Email</a>
+                <a href="https://scholar.google.com/citations?user=IZFSPNoAAAAJ&hl=en">Google Scholar</a>
+                <a href="https://orcid.org/0009-0000-6979-904X">ORCID</a>
+                <a href="https://bsky.app/profile/dmartinezfelip.bsky.social">Bluesky</a>
+            </div>
+            <div>© 2025 Daniel Martínez-Felip</div>
+        </footer>
+    </div>
 </body>
 </html>
