--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <table class="content-table">
                 <tr>
                     <td class="image-contact">
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&h=400&fit=crop" alt="Daniel Martínez Felip">
+                        <img src="Daniel_MartinezFelip.jpg" alt="Daniel Martínez Felip">
                         
                         <div class="contact-icons">
                             <a href="mailto:martinezfelipd@gmail.com" class="contact-link">
@@ -307,7 +307,7 @@
                     <td class="text">
                         <h2>About Me</h2>
                         <div class="quick-facts card">
-                            <h3></h3>
+                            <h3>Quick Facts</h3>
                             <ul>
                                 <li><strong>Location:</strong> Perth, Western Australia</li>
                                 <li><strong>Research Interests:</strong> Behavioural and experimental economics · Social norms · Institutions · Collective action problems</li>
