Correct capitalization in research interests section

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <div class="quick-facts card">
                             <ul>
                                 <li><strong>Location:</strong> Perth, Western Australia</li>
-                                <li><strong>Research Interests:</strong> Behavioural and experimental economics · Social norms · Institutions · Collective action problems</li>
+                                <li><strong>Research interests:</strong> Behavioural and experimental economics · Social norms · Institutions · Collective action problems</li>
                                 <li><strong>Affiliation:</strong> UWA Centre for Environmental Economics & Policy</li>
                             </ul>
                         </div>
