--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         --border: rgba(15, 23, 42, 0.12);
         --shadow: 0 18px 40px rgba(15, 23, 42, 0.12);
         --shadow-hover: 0 22px 50px rgba(15, 23, 42, 0.18);
-        --radius: 26px;
+        --radius: 16px;
+        --radius-soft: 12px;
     }
     body {
         font-family: 'Cambria', 'Times New Roman', serif;
@@ -68,7 +69,7 @@
         text-decoration: none;
         font-weight: 600;
         padding: 6px 14px;
-        border-radius: 999px;
+        border-radius: 12px;
         border: 1px solid transparent;
         transition: border-color 0.3s ease, color 0.3s ease, background-color 0.3s ease;
     }
@@ -89,7 +90,7 @@
         transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .card:hover {
-        transform: translateY(-4px);
+        transform: translateY(-1px);
         box-shadow: var(--shadow-hover);
     }
     .content-table {
@@ -106,9 +107,18 @@
     .image-contact img {
         max-width: 100%;
         height: auto;
-        border-radius: 18px;
+        border-radius: 12px;
         object-fit: contain;
         border: 1px solid var(--border);
+    }
+    .profile-photo {
+        margin: 0;
+    }
+    .photo-caption {
+        margin-top: 8px;
+        font-size: 0.85em;
+        color: var(--muted);
+        text-align: center;
     }
     .text {
         width: 75%;
@@ -129,6 +139,12 @@
     a:hover {
         color: var(--accent);
         text-decoration: underline;
+    }
+    a:focus-visible,
+    button:focus-visible {
+        outline: 2px solid var(--accent);
+        outline-offset: 3px;
+        border-radius: var(--radius-soft);
     }
     .contact-icons {
         display: flex;
@@ -165,7 +181,7 @@
     .quick-facts {
         margin: 18px 0 24px;
         padding: 18px 20px;
-        border-radius: 18px;
+        border-radius: 12px;
         background: var(--surface-alt);
         border: 1px solid var(--border);
     }
@@ -197,7 +213,7 @@
     .site-footer {
         margin-top: 32px;
         padding: 18px 24px;
-        border-radius: 999px;
+        border-radius: var(--radius-soft);
         background: var(--surface);
         border: 1px solid var(--border);
         box-shadow: var(--shadow);
@@ -221,6 +237,83 @@
     .footer-links a:hover {
         color: var(--muted);
         text-decoration: underline;
+    }
+    .cv-backdrop {
+        position: fixed;
+        inset: 0;
+        background: rgba(15, 23, 42, 0.55);
+        backdrop-filter: blur(6px);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s ease;
+        z-index: 1000;
+    }
+    .cv-modal {
+        position: fixed;
+        inset: 6% 6%;
+        background: var(--surface);
+        border: 1px solid var(--border);
+        border-radius: var(--radius);
+        box-shadow: var(--shadow);
+        display: flex;
+        flex-direction: column;
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(10px);
+        transition: opacity 0.2s ease, transform 0.2s ease, visibility 0.2s ease;
+        z-index: 1001;
+    }
+    .cv-modal-header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 12px;
+        padding: 16px 20px;
+        border-bottom: 1px solid var(--border);
+        background: var(--surface-alt);
+        border-top-left-radius: var(--radius);
+        border-top-right-radius: var(--radius);
+    }
+    .cv-modal-title {
+        margin: 0;
+        font-size: 1.1em;
+        color: var(--text);
+    }
+    .cv-close {
+        background: var(--surface);
+        border: 1px solid var(--border);
+        border-radius: var(--radius-soft);
+        padding: 6px 14px;
+        color: var(--muted);
+        font-weight: 600;
+        cursor: pointer;
+    }
+    .cv-modal-body {
+        flex: 1;
+        padding: 16px;
+        display: flex;
+    }
+    .cv-modal-body iframe {
+        flex: 1;
+        width: 100%;
+        border: 1px solid var(--border);
+        border-radius: 12px;
+        background: var(--surface);
+        box-shadow: var(--shadow);
+    }
+    body.cv-modal-open {
+        overflow: hidden;
+    }
+    body.cv-modal-open .container {
+        filter: blur(4px);
+        pointer-events: none;
+        user-select: none;
+    }
+    body.cv-modal-open .cv-backdrop,
+    body.cv-modal-open .cv-modal {
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
     }
     @keyframes gradientShift {
         0% {
@@ -250,7 +343,16 @@
             width: 100%;
         }
         .site-footer {
-            border-radius: 24px;
+        border-radius: 18px;
+        }
+        .cv-modal {
+            inset: 4% 4%;
+        }
+        .cv-modal-header {
+            padding: 12px 16px;
+        }
+        .cv-modal-body {
+            padding: 12px;
         }
     }
 </style>
@@ -264,7 +366,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="research.html">Research</a></li>
                     <li><a href="teaching.html">Teaching</a></li>
-                    <li><a href="curriculum_vitae.html">CV</a></li>
+                    <li><a href="curriculum_vitae.html" data-cv-trigger>CV</a></li>
                 </ul>
             </nav>
         </header>
@@ -272,7 +374,10 @@
             <table class="content-table">
                 <tr>
                     <td class="image-contact">
-                        <img src="Daniel_MartinezFelip.jpg" alt="Daniel Martínez Felip">
+                        <figure class="profile-photo">
+                            <img src="Daniel_MartinezFelip.jpg" alt="Daniel Martínez Felip">
+                            <figcaption class="photo-caption">PhD Candidate · UWA Centre for Environmental Economics & Policy</figcaption>
+                        </figure>
                         
                         <div class="contact-icons">
                             <a href="mailto:martinezfelipd@gmail.com" class="contact-link">
@@ -328,5 +433,54 @@
             <div>© 2025 Daniel Martínez-Felip</div>
         </footer>
     </div>
+    <div class="cv-backdrop" data-cv-close></div>
+    <div class="cv-modal" role="dialog" aria-modal="true" aria-labelledby="cv-modal-title">
+        <div class="cv-modal-header">
+            <h2 class="cv-modal-title" id="cv-modal-title">Curriculum Vitae</h2>
+            <button class="cv-close" type="button" data-cv-close>Close</button>
+        </div>
+        <div class="cv-modal-body">
+            <iframe src="https://drive.google.com/file/d/14yQ4v4fANxc674NiDEIoY8fFCZTq3TPw/preview" title="Curriculum Vitae" allowfullscreen loading="lazy"></iframe>
+        </div>
+    </div>
+    <script>
+        (() => {
+            const triggers = document.querySelectorAll('[data-cv-trigger]');
+            const modal = document.querySelector('.cv-modal');
+            const backdrop = document.querySelector('.cv-backdrop');
+            const body = document.body;
+
+            if (triggers.length && modal && backdrop) {
+                const closeButtons = modal.querySelectorAll('[data-cv-close]');
+
+                const openModal = () => {
+                    body.classList.add('cv-modal-open');
+                };
+
+                const closeModal = () => {
+                    body.classList.remove('cv-modal-open');
+                };
+
+                triggers.forEach((trigger) => {
+                    trigger.addEventListener('click', (event) => {
+                        event.preventDefault();
+                        openModal();
+                    });
+                });
+
+                backdrop.addEventListener('click', closeModal);
+                closeButtons.forEach((button) => {
+                    button.addEventListener('click', closeModal);
+                });
+
+                document.addEventListener('keydown', (event) => {
+                    if (event.key === 'Escape' && body.classList.contains('cv-modal-open')) {
+                        closeModal();
+                    }
+                });
+            }
+
+        })();
+    </script>
 </body>
 </html>
