--- a/research.html
+++ b/research.html
@@ -372,9 +372,9 @@
         <h3><span class="badge badge-review">Under Review</span></h3>
         <div class="paper-entry">
             <p>
-                How does experienced behavior change normative expectations regarding socially beneficial actions?<br>
+                <strong>How does experienced behavior change normative expectations regarding socially beneficial actions?</strong><br>
                 <em>with Steven G.M. Schilizzi and Chi Nguyen</em><br>
-                <strong>Revise and resubmit at the <em>Journal of Behavioral and Experimental Economics</em>.</strong>
+                Revise and resubmit at the <em>Journal of Behavioral and Experimental Economics</em>.
             </p>
             <a class="preprint-button" href="https://doi.org/10.31235/osf.io/vy6z2_v5">Preprint</a>
         </div>
@@ -382,19 +382,19 @@
         <h3><span class="badge badge-prep">Work in progress</span></h3>
         <div class="paper-entry">
             <p>
-                From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors<br>
+                <strong>From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors</strong><br>
                 <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
-                <strong>Being revised for resubmission.</strong>
+                Being revised for resubmission.
             </p>
             <a class="preprint-button" href="https://doi.org/10.31235/osf.io/j7usg_v1">Preprint</a>
         </div>
 
         <div class="paper-entry">
             <p>
-                Norm Heterogeneity and the Emergence of Cooperation: A Spatial Agent-Based Model of Conditional Cooperation
+                <strong>Norm Heterogeneity and the Emergence of Cooperation: A Spatial Agent-Based Model of Conditional Cooperation</strong>
                 <br>
                 <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
-                <strong>In preparation.</strong>
+                In preparation.
             </p>
         </div>
     </div>
