--- a/teaching.html
+++ b/teaching.html
@@ -306,7 +306,7 @@
         </header>
         
         <div class="content card">
-            <h2>Teaching Experience</h2>
+            <h2>Teaching experience</h2>
             <div class="teaching-entry">
                 <div class="course-title">Business and the Environment (ECON 3323)</div>
                 <div class="course-description">The University of Western Australia (2025)</div>
