--- a/research.html
+++ b/research.html
@@ -373,7 +373,7 @@
                 <h3><span class="badge badge-review">Under Review</span></h3>
                 <div class="paper-entry">
                     <p>
-                        <strong>How does experienced behavior change normative expectations regarding socially beneficial actions?</strong><br>
+                        <strong>How does experienced behaviour change normative expectations regarding socially beneficial actions?</strong><br>
                         <em>with Steven G.M. Schilizzi and Chi Nguyen</em><br>
                         Revise and resubmit at the <em>Journal of Behavioral and Experimental Economics</em>.
                     </p>
@@ -385,7 +385,7 @@
                 <h3><span class="badge badge-prep">Work in progress</span></h3>
                 <div class="paper-entry">
                     <p>
-                        <strong>From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviors</strong><br>
+                        <strong>From disapproval to social exclusion: the endogenous formation of non-financial incentives for collectively beneficial behaviours</strong><br>
                         <em>with Steven G.M. Schilizzi, Chi Nguyen, and David J. Pannell</em><br>
                         Being revised for resubmission.
                     </p>
